# r-dogecoin-bot

./: .flake8  .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: main.yml
r_dogecoin_bot/: main.py  types.py
r_dogecoin_bot/clients/: database.py
